Change log for zeit.web
=======================

2.49 (unreleased)
-----------------

- ZON-2632: Remove check for "static" galleries

- ZON-2595: IVW and Webtrekk pixels in instantarticles

- ZON-2634: Framebuilder can enable Webtrekk

- ZON-2649: Framebuilder can enable IVW

- MAINT: desktop_only parameter in framebuilder needs no value

- MAINT: Remove old iqd code

- MAINT: Remove unused IVW file (old version)


2.48 (2016-01-14)
-----------------

- FIX: FB Instant Articles: Add image copyrights

- BUG-315: Update cookie link in footer


2.47.1 (2016-01-14)
-------------------

- FIX: Fix memcache configuration bug, set up key generation function properly


2.47 (2016-01-13)
-----------------

- ZON-2608: Prevent images from unwanted rescaling on mobile pages/apps

- ZON-2448: Fix IE11 misplaced buttons gallery bug

- ZON-2250: Add label to storystream

- ZON-2214: Enable Nextread for video pages

- ZON-2575: Move feature toggles to configuration file

- ZON-2594: New customParameter for Webtrekk: platform

- BUG-327: Add webtrekk customerId for authenticated users

- ZON-2592: Use dogpile.cache instead of beaker for caching/memcache
  Also, use our own session backend instead of beaker (stores data in
  memcache, but does not use a separate cookie -- which doesn't work anyway
  since /login-state is an ESI, so cookies it sends are eaten by Varnish)

- ZON-2175: Add ressort and kicker to meta keywords

- ZON-2416: Insert new meta robot rules to Serienseiten

- FIX: Make topic teaser more stable, if invalid CP is referenced

- FIX: Add ClickCounter to ZON

- FIX: Be more defensive in several places:
  * Handle community read errors during recommendation (for real now)
  * Solr results with references to retracted images
  * Solr results with wrongly indexed content types
  * Comment count of objects that are neither CP nor Article
  * Reject delta_time requests for non-CPs
  * Set a timeout for POSTs to the community
